[workspace]
members = [
    "programs/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
codegen-units = 1
debug = false
opt-level = "z"
lto = true

[profile.release.build-override]
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
spl-token-2022 = { version = "9.0.0", features = ["no-entrypoint"] }
